syntax = "proto3";

package role;

option go_package = "./role";

// base message

message IDReq {
  uint64 ID = 1;
}

message BaseResp {
  uint32 code = 1;
  string msg = 2;
}

message PageInfoReq {
  uint64 page_no = 1;
  uint64 page_size = 2;
}

// custom message

message CreateRoleReq {
  uint64 role_id = 1;
  uint64 parent_id = 2;
  string default_router = 3;
}

message UpdateRoleReq {
  uint64 id = 1;
  uint64 role_id = 2;
  uint64 parent_id = 3;
  string default_router = 4;
}

message RoleResp {
  uint64 id = 1;
  uint64 role_id = 2;
  uint64 parent_id = 3;
  string default_router = 4;
  uint64 create_at = 5;
  uint64 update_at = 6;
  uint64 delete_at = 7;
}

message RoleListResp {
  uint64 total = 1;
  uint32 code = 2;
  repeated RoleResp data = 3;
}

service Role {
  rpc createRole (CreateRoleReq) returns (BaseResp);
  rpc updateRole (CreateRoleReq) returns (BaseResp);
  rpc deleteRole (IDReq) returns (BaseResp);
  rpc getRoleById (IDReq) returns (RoleResp);
  rpc getRoleList (PageInfoReq) returns (RoleListResp);
}